--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,53 @@
     transform: rotate(360deg);
   }
 }
+
+.DataContainer{
+  padding-top: 2%;
+  max-width: 1200px;
+  margin: auto;
+  margin-top: 0;
+  height: 9500px;
+  margin-bottom: 100px;
+  background-color: brown;
+}
+.h1Title{
+  padding-top: 2%;
+  margin-top: 0;
+  margin-bottom: 100px;
+  height:80px;
+  background-color: brown;
+}
+.h2Title{
+  width: 500px;
+  margin: auto;
+  padding-bottom: 5%;
+  border-bottom: 2px solid brown;
+}
+
+.ApiData{
+  width: 1000px;
+  height: 9200px;
+  margin: auto;
+  border: 4px solid black;
+  background-color: white;
+  display: flex;
+  
+}
+.card{
+  width: 400px;
+  height: 400px;
+  margin: 50px;
+  background-color: white;
+  border: 2px solid black;
+
+}
+.astroidContainer{
+  max-width: 900px;
+  height: 1800px;
+}
+p{
+  text-align: left;
+  font-size: 1.5rem;
+  border: 1px solid black;
+}
