--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 .App {
   text-align: center;
+  background-image: url("./nasaUnsplash.jpg");
+  background-size: 2000px;
+  background-repeat: repeat;
+  margin-bottom: 0;
+}
+html{
+  bacground-color: black;
 }
 .dd{
   text-align: left;
@@ -44,9 +51,10 @@
   max-width: 1200px;
   margin: auto;
   margin-top: 0;
-  height: 10200px;
+  margin-bottom: 0;
+  height: 6200px;
   margin-bottom: 100px;
-  background-color: brown;
+  /* background-color: brown; */
 }
 .h1Title{
   padding-top: 2%;
@@ -59,15 +67,24 @@
   width: 500px;
   margin: auto;
   padding-bottom: 5%;
-  border-bottom: 2px solid brown;
+  border-bottom: 2px solid #61dafb;
+  color: white;
+  font-weight: bold;
+  color: #61dafb;
+  text-shadow: 0 5px 10px #777;
+  background-color: black;
+  padding-top: 50px;
+  box-shadow: 0 5px 10px #777;
 }
 
 .ApiData{
   width: 1000px;
-  height: 9200px;
+  height: 5400px;
   margin: auto;
-  border: 4px solid black;
-  background-color: white;
+  
+  border: 4px solid transparent;
+  box-shadow: 0 5px 10px #777;
+  background-color: transparent;
   display: flex;
   
 }
@@ -87,4 +104,7 @@ p{
   text-align: left;
   font-size: 1.5rem;
   border: 1px solid black;
+}
+h2{
+  color: white;
 }
